--- a/sigmaCabs/app/views/bookings/dispositionForm.html
+++ b/sigmaCabs/app/views/bookings/dispositionForm.html
@@ -32,7 +32,7 @@
                     <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="dispositionDetails.followUpMinutes" ng-options='k as v for (k,v) in minutes' style="width:48px;" ng-disabled="followUpFields" ></select>
                 </div>
                 <div class="fieldContainer  relative left" style="height:75px;margin-top: 5px;">
-                    <label class="labelCompact">Comment</label>
+                    <label class="labelCompact requiredField">Comment</label>
                     <textarea data-ng-model="dispositionDetails.comments" class="cancelBookingComment" style="width: 289px;"></textarea>
                 </div>
 
