--- a/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
@@ -22,7 +22,7 @@
                     <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.location}}">{{vehicleDetails.vehicleMainDetails.location}}</span>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">New Location</label>
+                    <label class="labelCompact requiredField">New Location</label>
                     <input type="text" data-ng-class="{fieldExpand: locationFocused}" data-ng-blur="locationFocused=false" data-ng-focus="locationFocused=true" data-ng-model="changePickup.newLocation" maxlength="15" class="textFieldCompact" googleplace/>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
