--- a/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
@@ -25,11 +25,11 @@
                     </select>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeStatus.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangeStatusReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Priority</label>
+                    <label class="labelCompact requiredField">Priority</label>
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeStatus.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
