--- a/sigmaCabs/app/views/bookings/bookingForm.html
+++ b/sigmaCabs/app/views/bookings/bookingForm.html
@@ -1,51 +1,51 @@
 <fieldset data-ng-controller="bookingFormController" class="bookingFormController left" style="margin-left: 7px;">
     <legend class="searchbox-border">Travel Information <span>({{ bookingStatusName }})</span></legend>
 
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Pickup Date</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact requiredField">Pickup Date</label>
         <input type="text" datepicker ng-model="bookingDetails.pickupDate" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" data-ng-change="fnChangeTimePerDate()" dpMinDate="dpCurrentDate" dpMaxDate="dpCurrentPlusSevenDate"  />
     </div>
-    <div class="fieldContainer  relative right">
-        <label class="labelCompact">Pickup Time</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact requiredField">Pickup Time</label>
         <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingDetails.pickupHours" ng-options='k as v for (k,v) in hours' data-ng-change="fnValidatePickupTime()" style="width:48px;"></select>
         <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-change="fnValidatePickupTime()"  data-ng-model="bookingDetails.pickupMinutes" ng-options='k as v for (k,v) in minutes' style="width:48px;"></select>
     </div>
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Vehicle Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-change="fnPopVehicleNames();" data-ng-model="tmpDetails.tmpVehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes"></select>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact requiredField">Vehicle Type</label>
+        <select class="validate[maxSize[36]] selectFieldCompact"  data-ng-change="fnPopVehicleNames();" data-ng-model="tmpDetails.tmpVehicleType" data-ng-options="obj.id as obj.vehicleType for obj in vehicleTypes"></select>
     </div>
-    <div class="fieldContainer  relative right">
-        <label class="labelCompact">Vehicle Name</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact requiredField">Vehicle Name</label>
         <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-change="fnPopVehicleTypes();" data-ng-model="tmpDetails.tmpVehicleName" data-ng-options="obj.id as obj.vehicleName for obj in vehicleNames"></select>
     </div>
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Pickup</label>
-        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder=""  googleplace/>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact requiredField">Pickup</label>
+        <input type="text"  data-ng-class="{fieldExpand: pickupFocused}" data-ng-blur="pickupFocused = false" data-ng-focus="pickupFocused = true" ng-model="bookingDetails.pickupPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" googleplace/>
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <button class="left btnCompact btn-success" style="border-radius: 5px; margin:0px;" ng-click = "checkVehicleAvilabilty()">Vehicle Availability</button>
         <button class="left btnCompact btn-grey" style="border-radius: 5px;" ng-click = "checkMultiVehicle()">Multi Vehicle</button>
     </div>
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Journey Type</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact requiredField">Journey Type</label>
         <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
     </div>
-    <div class="fieldContainer  relative right">
-        <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
+    <div class="fieldContainer relative right">
+        <label class="labelCompact requiredField" style="width: 113px;">Sub-Journey Type</label>
         <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}" data-ng-change="fnSelectTariffBySubJourneyType();"></select>
     </div>
-    <div class="fieldContainer  relative left">
-        <label class="labelCompact">Drop</label>
+    <div class="fieldContainer relative left">
+        <label class="labelCompact requiredField">Drop</label>
         <input type="text"  data-ng-class="{fieldExpand: dropFocused}" data-ng-blur="dropFocused = false" data-ng-focus="dropFocused = true" ng-model="bookingDetails.dropPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" googleplace />
     </div>    
-    <div class="fieldContainer  relative right" style="width: 40%;">
+    <div class="fieldContainer relative right" style="width: 40%;">
         <button class="left btnCompact btn-success" style="border-radius: 5px;" ng-click = "checkTariff()">Tariff</button>
     </div>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left">
         <label class="labelCompact">Landmark1</label>
         <input type="text"  data-ng-class="{fieldExpand: land1Focused}" data-ng-blur="land1Focused = false" data-ng-focus="land1Focused = true"  ng-model="bookingDetails.landmark1" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right">
         <label class="labelCompact" style="z-index: 0;">Landmark2</label>
         <input type="text" data-ng-class="{fieldExpandLeft: land2Focused}" data-ng-blur="land2Focused = false" data-ng-focus="land2Focused = true"  ng-model="bookingDetails.landmark2" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" />
     </div>
