--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -22,15 +22,15 @@
                     <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.details.location}}">{{vehicleDetails.vehicleMainDetails.details.location}}</span>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">New Location</label>
+                    <label class="labelCompact requiredField">New Location</label>
                     <input type="text" data-ng-class="{fieldExpand: locationFocused}" data-ng-blur="locationFocused=false" data-ng-focus="locationFocused=true" ng-model="changeLocation.newLocation" maxlength="15" class="textFieldCompact" googleplace/>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Current Kms</label>
+                    <label class="labelCompact requiredField">Current Kms</label>
                     <input type="text" ng-model="changeLocation.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changeLocation.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangeLocReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
