--- a/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
+++ b/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
@@ -19,15 +19,15 @@
                 <legend class="searchbox-border">Change Vehicle Phone No</legend>
 
                 <div class="fieldContainer  relative">
-                    <label class="labelCompact">New Phone No.</label>
+                    <label class="labelCompact requiredField">New Phone No.</label>
                     <input type="text" ng-model="changePhone.newMobile" maxlength="15" class=" textFieldCompact" phone/>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Category By</label>
+                    <label class="labelCompact requiredField">Category By</label>
                      <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changePhone.categoryId" data-ng-options="obj.id as obj.categoryName for obj in vehicleCategoryTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changePhone.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangePhoneReasonTypes"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
