--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -36,23 +36,17 @@
         <span>{{vehicleMainDetails.details.customerMobile}}</span>
     </div>
     <p class="clear"/>
-    <div class="fieldContainer  relative left">
+    <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes" disabled></select>
+        <span>{{vehicleMainDetails.details.journeyTypeText}}</span>
+        <select class=" validate[maxSize[36]] selectFieldCompact hide" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes" disabled></select>
     </div>
-    <div class="fieldContainer  relative right">
+    <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="vehicleMainDetails.details.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}" disabled></select>
+        <span>{{vehicleMainDetails.details.subJourneyTypeText}}</span>
+        <select class=" validate[maxSize[36]] selectFieldCompact hide"  data-ng-model="vehicleMainDetails.details.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}" disabled></select>
     </div>
     <p class="clear"/>
-    <!-- <div class="fieldContainer relative left">
-        <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpDetails.tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
-    </div>
-    <div class="fieldContainer relative right">
-        <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
-    </div> -->
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Landmark1</label>
         <span class="ellipsisText" title="{{vehicleMainDetails.details.landmark1}}">{{vehicleMainDetails.details.landmark1}}</span>
