--- a/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
@@ -18,19 +18,19 @@
             <fieldset class="left">
                 <legend class="searchbox-border">Vehicle Breakdown</legend>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Current Kms</label>
+                    <label class="labelCompact requiredField">Current Kms</label>
                     <input type="text" ng-model="breakDown.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Category By</label>
+                    <label class="labelCompact requiredField">Category By</label>
                      <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakDown.categoryId" data-ng-options="obj.id as obj.categoryName for obj in vehicleCategoryTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakDown.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Priority</label>
+                    <label class="labelCompact requiredField">Priority</label>
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakDown.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
