--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -29,7 +29,7 @@
         </div>
         <div class="fieldContainer clearBoth relative">
             <label class="labelCompact">Current Place</label>
-            <input type="text" ng-model="vehicleMainDetails.location" class="left validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" ng-model="vehicleMainDetails.location" class="left validate[required,maxSize[128]] textFieldCompact" readonly title="{{vehicleMainDetails.location}}" />
         </div>
         <div class="fieldContainer clearBoth relative" >
             <label class="labelCompact">Driver Name</label>
