--- a/sigmaCabs/app/views/dispatches/vehicleLogout.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLogout.html
@@ -18,11 +18,11 @@
             <fieldset>
                 <legend class="searchbox-border">Vehicle Logout</legend>
                 <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Current Location">Current Loc.</label>
+                    <label class="labelCompact requiredField" title="Current Location">Current Loc.</label>
                     <input type="text" data-ng-class="{fieldExpand: locationFocused}" data-ng-blur="locationFocused=false" data-ng-focus="locationFocused=true" ng-model="logout.currentLocation" maxlength="20" class="textFieldCompact" googleplace />
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact">Current Kms</label>
+                    <label class="labelCompact requiredField">Current Kms</label>
                     <input type="text" ng-model="logout.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <p class="clear"/>
@@ -41,7 +41,7 @@
                     <p class="clear"/>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact" title="Vehicle Checked By">Checked By</label>
+                    <label class="labelCompact requiredField" title="Vehicle Checked By">Checked By</label>
                     <input type="text" ng-model="logout.checkedBy" maxlength="20" class="textFieldCompact"/>
                 </div>
                 <div class="fieldContainer relative" style="height:60px;">
