--- a/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehiclesForBookingSplitView.html
@@ -1,16 +1,27 @@
 <div fit-height-layout ng-model ="bookingVehiclesGridHeight">
-	<div class="gridStyle" id="dispatcherVehiclesForBookingGrid" ng-grid="gridForVehicleBookingsData" style="margin:0px;" ng-class="{vehicleHalfView:bookingVehicleSelected}"></div>
-	<div class="booking-vehicle-info-holder" ng-show='bookingVehicleSelected'>
+	<!--
+
+	<div class="gridStyle" id="dispatcherVehiclesForBookingGrid" ng-grid="gridForVehicleBookingsData" style="margin:0px;" ng-class="{vehicleHalfView:bookingVehicleSelected}"></div> 
+	-->
+
+	<div id="dispatcherVacantVehiclesGrid" class="gridStyle" ng-grid="gridForVacantVehiclesData" style="margin:0px;" ng-class="{vehicleHalfView:vacantVehicleSelected}" data-ng-show="showVacantVehicleGrid"> </div>
+
+	<div class="booking-vehicle-info-holder" ng-show='showVehicleInfo'>
 		<div class="panel panel-info">
 			<div class="panel-heading short-panel-heading">
-			    <span class="panel-title left">Vehicle details</span>
-				<span ng-switch on="vehicleDetailsData.vehicle.vehicleStatus" class="right">
-					<button class="btnCompact btn-success left" ng-switch-when="2" data-ng-click="fnControlViewVehicleAccepBooking()">Accept</button>
-            		<button class="btnCompact btn-danger left" ng-switch-when="2" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
+			    <span class="panel-title left">Vehicle details</span>			    
+				<i class="glyphicon glyphicon-remove right" ng-click="bookingVehicleDetailsPageCloseFn();" data-ng-show="showCloseVehicleInfoBtn"></i>
 
-					<button ng-switch-when="4" class="btnCompact btn-success left" data-ng-click="fnControlViewVehicleConfirm()">Confirm</button>
-					<button ng-switch-when="4" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
-					<i class="glyphicon glyphicon-remove" ng-click="bookingVehicleDetailsPageCloseFn()"></i>
+				<span ng-switch on="selectedBookingDetails.bookingStatus" class="right" data-ng-show="showVehicleButtons">
+					<button class="btnCompact btn-success left" ng-switch-when="4" data-ng-click="fnControlViewVehicleAccepBooking()">Accept</button>
+            		<button class="btnCompact btn-danger left" ng-switch-when="4" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
+
+					<button ng-switch-when="5" class="btnCompact btn-success left" data-ng-click="fnControlViewVehicleConfirm()">Confirm</button>
+					<button ng-switch-when="5" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
+
+
+					<button ng-switch-when="6" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleCancel()">Cancel</button>
+					<button ng-switch-when="6" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
 					<span class="clearfix"></span>
 				</span>
 				<span class="clearfix"></span>
