Alphabets directive added, fixed mantis issues and added serverService changes

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -5,6 +5,7 @@ $icon-font-path: "./../bower_components/sass-bootstrap/fonts/";
 @import 'dispatch';
 @import 'controlView';
 @import 'dashboard';
+@import 'bookingStatistics';
 $gray_color_dark: #403F41;
 $gray_dark_border: 1px solid $gray_color_dark;
 $white_color: #ffffff;/*white background*/
