--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -49,7 +49,7 @@ width: 115px;">{{bookingClose.tripTime}}</span>
                     <span class="ellipsisText" title="{{vehicleDetails.vehicleMainDetails.details.dropPlace}}">{{vehicleDetails.vehicleMainDetails.details.dropPlace}}</span>
                 </div>
                 <div class="fieldContainer relative left margin-right10">
-                    <label class="labelCompact requiredField">New Drop Place</label>
+                    <label class="labelCompact">New Drop Place</label>
                     <input type="text" data-ng-class="{fieldExpand: locationFocused}" data-ng-blur="locationFocused=false" data-ng-focus="locationFocused=true" ng-model="bookingClose.actualDropPlace" maxlength="15" class="textFieldCompact" googleplace/>
                 </div>
                 <p class="clear"/>
