--- a/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
@@ -27,9 +27,9 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Request Time</label>
-                    <input type="text" datepicker ng-model="breakStart.pickupDate" class="textFieldCompact" placeholder="" dpMinDate="dpCurrentDate" dpMaxDate="dpCurrentPlusSevenDate"  />
-                    <select class="selectFieldCompact" data-ng-model="breakStart.pickupHours" ng-options='k as v for (k,v) in hours' style="width: 50px;"></select>
-                    <select class="selectFieldCompact" data-ng-model="breakStart.pickupMinutes" ng-options='k as v for (k,v) in minutes' style="width:50px;"></select>
+                    <!-- <input type="text" datepicker ng-model="breakStart.pickupDate" class="textFieldCompact" placeholder="" dpMinDate="dpCurrentDate" dpMaxDate="dpCurrentPlusSevenDate"  /> -->
+                    <select class="selectFieldCompact" data-ng-model="breakStart.pickupHours" ng-options='k as v for (k,v) in hours' style="width: 50px;" title="Hours"></select>
+                    <select class="selectFieldCompact" data-ng-model="breakStart.pickupMinutes" ng-options='k as v for (k,v) in minutes' style="width:50px;" title="Minutes"></select>
                     <p class="clear"/>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;display:none;">
