--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -14,7 +14,7 @@
         </div> -->
         <div class="fieldContainer relative clearBoth">
             <label class="labelCompact">V.Owner Name </label>
-            <input type="text" ng-model="vehicleMainDetails.owner.name" class="left validate[required,maxSize[128]] textFieldCompact"  />
+            <input type="text" ng-model="vehicleMainDetails.owner.name" class="left textFieldCompact" alphabets-only readonly />
             <span class="smsText">SMS</span>
         </div>
         <div class="fieldContainer relative clearBoth">
