--- a/sigmaCabs/app/views/dispatches/vehicleLogout.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLogout.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField" title="Vehicle Checked By">Checked By</label>
-                    <input type="text" ng-model="logout.checkedBy" maxlength="20" class="textFieldCompact"/>
+                    <input type="text" ng-model="logout.checkedBy" maxlength="20" class="textFieldCompact" alphabets-only restrict="A"/>
                 </div>
                 <div class="fieldContainer relative" style="height:60px;">
                     <label class="labelCompact">Comments</label>
@@ -66,11 +66,11 @@
                     <p class="clear"/>
                     <div class="fieldContainer relative left" style="width:180px;">
                         <label class="labelCompact" title="Filling Station Name">Bunk Name</label>
-                        <input type="text" ng-model="logout.fuelName" maxlength="20" class="textFieldCompact"/>
+                        <input type="text" ng-model="logout.fuelName" maxlength="20" class="textFieldCompact" alphabets-only restrict="AN"/>
                     </div>
                     <div class="fieldContainer relative right" style="width:180px">
                         <label class="labelCompact" title="Filling Station Receipt No">Receipt No.</label>
-                        <input type="text" ng-model="logout.fuelReceiptNo" maxlength="20" class="textFieldCompact"/>
+                        <input type="text" ng-model="logout.fuelReceiptNo" maxlength="20" class="textFieldCompact" alphabets-only restrict="AN"/>
                     </div>
                     <p class="clear"/>
                     <div class="fieldContainer relative">
@@ -79,11 +79,11 @@
                     </div>
                     <div class="fieldContainer relative left" style="width:180px;">
                         <label class="labelCompact" title="Incharge Name from Company">Incharge Nm.</label>
-                        <input type="text" ng-model="logout.fuelIncharge" maxlength="20" class="textFieldCompact"/>
+                        <input type="text" ng-model="logout.fuelIncharge" maxlength="20" class="textFieldCompact" alphabets-only restrict="A"/>
                     </div>
                     <div class="fieldContainer relative right" style="width:180px">
                         <label class="labelCompact" title="Voucher Number - Issued by Company">Voucher No.</label>
-                        <input type="text" ng-model="logout.fuelVoucher" maxlength="20" class="textFieldCompact" />
+                        <input type="text" ng-model="logout.fuelVoucher" maxlength="20" class="textFieldCompact" alphabets-only restrict="AN" />
                     </div>
                     <p class="clear"/>
                 </div>
