--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -46,6 +46,8 @@
 			    
 	        </div>
 
+	        <div class="callTransfer left marginRightLeft5" data-ng-include="callTakerBreakTime"></div>
+
 
 	        <div class="fieldContainer right marginRightLeft5">
 	            <label class="labelCompact bokingSelect">Booking Number</label>
