--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -176,14 +176,39 @@
 								<select class=" autoWidth selectFieldCompact" data-ng-model="viSearch.vCondtion" data-ng-options="obj.id as obj.condition for obj in vConditions"></select>
 							</div>
 						</div>	
-						<div class="row margin-bottom5">
+						<!-- <div class="row margin-bottom5">
 							<div class="col-xs-5">
 							<label title="Vehicle Condition">Status</label>
 							</div>
 							<div class="col-xs-7">
 								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.vStatus" data-ng-options="obj.id as obj.vehicleStatus for obj in vStates"></select>
 							</div>
-						</div>						
+						</div> -->
+
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Zone">Zone</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Area">Area</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Vaccant Time">Vacant Tm.</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.vacantTm" data-ng-options="obj.id as obj.title for obj in oVacantTimes"></select>
+							</div>
+						</div>
 						<div class="row margin-bottom5">
 							<div class="col-xs-6">
 								<label title="Projected Hours" >P.H.</label>
@@ -195,7 +220,7 @@
 							</div>
 						</div>
 						<div class=" margin-bottom5" style="text-align: center;">
-							<button data-ng-click="fnSearchVehicleInfo();">Search</button>
+							<button data-ng-click="fnSearchWhileDrivingVehicleInfo();">Search</button>
 						</div>
 					</div>
 
@@ -434,7 +459,7 @@
 		<div class="panel-body custom-panel-body" fit-height-layout ng-model ="bookingGridBorder">
 			<div ng-switch="mainGridView" class="mainGridView">
 				<div ng-switch-when="vInfo" class="flex-height">
-						<div id="dispatcherVacantVehiclesGrid" class="gridStyle" ng-grid="gridForVacantVehiclesData" style="margin:0px;" ng-show="!whileDrivingVehicleSelected"> </div>
+						<!-- <div id="dispatcherVacantVehiclesGrid" class="gridStyle" ng-grid="gridForVacantVehiclesData" style="margin:0px;" ng-show="!whileDrivingVehicleSelected"> </div> -->
 						<div ng-show="whileDrivingVehicleSelected">
 							<div class="tabs">
 								<div class="tabHeader clearfix">
