--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -6,6 +6,7 @@ $icon-font-path: "./../bower_components/sass-bootstrap/fonts/";
 @import 'controlView';
 @import 'dashboard';
 @import 'bookingStatistics';
+@import 'angucomplete';
 $gray_color_dark: #403F41;
 $gray_dark_border: 1px solid $gray_color_dark;
 $white_color: #ffffff;/*white background*/
